--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinners": "^0.13.8",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
